force-app/main/default/objects/MUSW__Address__c/MUSW__Address__c.object-meta.xml
<CustomObject>
    <description>Address represents a location on a parcel.</description>
    <label>Address</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>