force-app/main/default/objects/MUSW__Address__c/fields/Avo_GIS_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Avo_GIS_Address_ID__c</fullName>
    <label>GIS Address ID</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>