force-app/main/default/objects/MUSW__Address__c/fields/External_Address__c.field-meta.xml
<CustomField>
    <fullName>External_Address__c</fullName>
    <label>External Address</label>
    <length>18</length>
    <referenceTo>TEST_Parcels__x</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>ExternalLookup</type>
</CustomField>