force-app/main/default/objects/MUSW__Address__c/fields/MUSW__City__c.field-meta.xml
<CustomField>
    <fullName>MUSW__City__c</fullName>
    <description>City element in an address.</description>
    <inlineHelpText>Provide the city for this address.</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>