force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Country__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Country__c</fullName>
    <description>Country element in the address.</description>
    <inlineHelpText>Provide the country for this address.</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Countries</valueSetName>
    </valueSet>
</CustomField>