force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Geolocation__c</fullName>
    <description>Compound field containing the latitude and longitude for the address.</description>
    <inlineHelpText>Provide the latitude and longitude for the address.</inlineHelpText>
    <label>Geolocation</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>