force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Prefix_Direction__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Prefix_Direction__c</fullName>
    <description>Prefix direction element in an address.</description>
    <inlineHelpText>Provide the prefix direction for this address.</inlineHelpText>
    <label>Prefix Direction</label>
    <length>40</length>
    <type>Text</type>
</CustomField>