force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Prefix_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Prefix_Street_Type__c</fullName>
    <description>Prefix street type element in an address.</description>
    <inlineHelpText>Provide a prefix street type for this address.</inlineHelpText>
    <label>Prefix Street Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>