force-app/main/default/objects/MUSW__Address__c/fields/MUSW__State__c.field-meta.xml
<CustomField>
    <fullName>MUSW__State__c</fullName>
    <description>State element in an address.</description>
    <inlineHelpText>Provide the state/province for this address.</inlineHelpText>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__States</valueSetName>
    </valueSet>
</CustomField>