force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Status__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Status__c</fullName>
    <description>Status of the address.</description>
    <inlineHelpText>Provide the status of this address.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>