force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Street_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Street_Name__c</fullName>
    <description>Street Name element in an address.</description>
    <inlineHelpText>Provide the street name for this address.</inlineHelpText>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>