force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Street_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Street_Number__c</fullName>
    <description>Street Number element in an address.</description>
    <inlineHelpText>Provide the street/house number for this address.</inlineHelpText>
    <label>Street Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>