force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Suffix_Direction__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Suffix_Direction__c</fullName>
    <description>Suffix Direction element in an address.</description>
    <inlineHelpText>Provide the suffix direction for this address.</inlineHelpText>
    <label>Suffix Direction</label>
    <length>40</length>
    <type>Text</type>
</CustomField>