force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Suffix_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Suffix_Street_Type__c</fullName>
    <description>Suffix street type element in an address.</description>
    <inlineHelpText>Provide the suffix street type for this address.</inlineHelpText>
    <label>Suffix Street Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>