force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Unit_Suite__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Unit_Suite__c</fullName>
    <description>Unit or Suite number in the Address</description>
    <inlineHelpText>Provide the unit or suite number for this address.</inlineHelpText>
    <label>Unit/Suite</label>
    <length>15</length>
    <type>Text</type>
</CustomField>