force-app/main/default/objects/MUSW__Address__c/fields/MUSW__Zip__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Zip__c</fullName>
    <description>Zip Code element in an address.</description>
    <inlineHelpText>Provide the postal/zip code for this address.</inlineHelpText>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>