force-app/main/default/objects/MUSW__Address__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Parcel__c</columns>
    <columns>MUSW__Country__c</columns>
    <columns>MUSW__Street_Name__c</columns>
    <columns>MUSW__Street_Number__c</columns>
    <columns>MUSW__State__c</columns>
    <columns>MUSW__City__c</columns>
    <columns>MUSW__Zip__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>